--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <section class="first-section">
         <div class="container">
           <h1 class="main-headline">Effective Solutions for Your Business</h1>
-          <button type="button" class="button-order-service">
+          <button type="button" class="button-order-service" data-modal-open>
             Order Service
           </button>
         </div>
@@ -70,10 +70,15 @@
             <li class="second-section-item">
               <h3 class="quality">Strategy</h3>
               <p class="quality-text">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
+              Our goal is to identify the business problem to walk away with
+              the perfect and creative solution.
               </p>
             </li>
+            <div>
+              <svg width="64" height="64">
+                <use href="./images/antenna.svg"></use>
+              </svg>  
+            </div>  
             <li class="second-section-item">
               <h3 class="quality">Punctuality</h3>
               <p class="quality-text">
