--- a/index.html
+++ b/index.html
@@ -74,11 +74,6 @@
               the perfect and creative solution.
               </p>
             </li>
-            <div>
-              <svg width="64" height="64">
-                <use href="./images/antenna.svg"></use>
-              </svg>  
-            </div>  
             <li class="second-section-item">
               <h3 class="quality">Punctuality</h3>
               <p class="quality-text">
@@ -186,6 +181,29 @@
                 <p class="person-text">UI Designer</p>
               </div>
             </li>
+          </ul>
+          <ul class="social-networks">
+            <li class="social-networks-item">
+                <a href="inst" class="social-network-link">
+                  <svg width="16" height="16" class="icon-link"><use href="./images/sn_instagram.png"></svg>
+                </a>              
+            </li>
+            <li>
+                <a href="twit" class="social-network-link">
+                  <svg width="16" height="16" class="icon-link"><use href="./images/sn_twitter.png"></svg>
+                </a>
+            </li>
+            <li>
+              <a href="facebook" class="social-network-link">
+                <svg width="16" height="16" class="icon-link"><use href="./images/sn_facebook.png"></svg>
+              </a>
+            </li>
+            <li>
+              <a href="linkedin" class="social-network-link">
+                <svg width="16" height="16" class="icon-link"><use href="./images/sn_linkedin.png"></svg>
+              </a>
+            </li>
+
           </ul>
         </div>
       </section>
