--- a/index.html
+++ b/index.html
@@ -184,26 +184,57 @@
           </ul>
           <ul class="social-networks">
             <li class="social-networks-item">
-                <a href="inst" class="social-network-link">
+                <a href="" class="social-network-link">
                   <svg width="16" height="16" class="icon-link"><use href="./images/sn_instagram.png"></svg>
                 </a>              
             </li>
             <li>
-                <a href="twit" class="social-network-link">
+                <a href="" class="social-network-link">
                   <svg width="16" height="16" class="icon-link"><use href="./images/sn_twitter.png"></svg>
                 </a>
             </li>
             <li>
-              <a href="facebook" class="social-network-link">
+              <a href="" class="social-network-link">
                 <svg width="16" height="16" class="icon-link"><use href="./images/sn_facebook.png"></svg>
               </a>
             </li>
             <li>
-              <a href="linkedin" class="social-network-link">
+              <a href="" class="social-network-link">
                 <svg width="16" height="16" class="icon-link"><use href="./images/sn_linkedin.png"></svg>
               </a>
             </li>
-
+          </ul>
+        </div>
+      </section>
+      <section class="fifth-section">
+        <div>
+          <h2 class="headline-fifth-section">Customers</h2>
+          <ul list-of-customers>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg width="104" height="56" class="customers-svg"><use href="./images/photo11.svg"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg width="104" height="56" class="customers-svg"><use href="./images/photo22.svg"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg width="104" height="56" class="customers-svg"><use href="./images/photo33.svg"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg width="104" height="56" class="customers-svg"><use href="./images/photo44.svg"></use></svg>
+              </a>
+            </li>
+            <li class="customers-item">
+              <a href="" class="customers-link">
+                <svg width="104" height="56" class="customers-svg"><use href="./images/photo55.svg"></use></svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
