--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <h2 class="visually-hidden">.</h2>
           <ul class="list second-section-list">
             <li class="second-section-item">
+              <div class="div-for-icon">
+                  <svg width="64" height="64">
+                    <use href="./images/icon.svg#icon-antenna"></use>
+                  </svg>
+              </div>
               <h3 class="quality">Strategy</h3>
               <p class="quality-text">
               Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="second-section-item">
+              <div class="div-for-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icon.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="quality">Punctuality</h3>
               <p class="quality-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="second-section-item">
+              <div class="div-for-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icon.svg#icon-diagram"></use>
+                </svg>
+              </div>   
               <h3 class="quality">Diligence</h3>
               <p class="quality-text">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +104,11 @@
               </p>
             </li>
             <li class="second-section-item">
+              <div class="div-for-icon">
+                <svg width="64" height="64">
+                  <use href="./images/icon.svg#icon-astronaut"></use>
+                </svg>
+              </div>  
               <h3 class="quality">Technologies</h3>
               <p class="quality-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -182,60 +202,38 @@
               </div>
             </li>
           </ul>
-          <ul class="social-networks">
-            <li class="social-networks-item">
+          <div>
+            <ul class="social-networks">
+              <li class="social-networks-item">
+                  <a href="" class="social-network-link">
+                    <svg width="16" height="16" class="icon-link">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>              
+              </li>
+              <li>
+                  <a href="" class="social-network-link">
+                    <svg width="16" height="16" class="icon-link">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+              </li>
+              <li>
                 <a href="" class="social-network-link">
-                  <svg width="16" height="16" class="icon-link"><use href="./images/sn_instagram.png"></svg>
-                </a>              
-            </li>
-            <li>
-                <a href="" class="social-network-link">
-                  <svg width="16" height="16" class="icon-link"><use href="./images/sn_twitter.png"></svg>
+                  <svg width="16" height="16" class="icon-link">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
                 </a>
-            </li>
-            <li>
-              <a href="" class="social-network-link">
-                <svg width="16" height="16" class="icon-link"><use href="./images/sn_facebook.png"></svg>
-              </a>
-            </li>
-            <li>
-              <a href="" class="social-network-link">
-                <svg width="16" height="16" class="icon-link"><use href="./images/sn_linkedin.png"></svg>
-              </a>
-            </li>
-          </ul>
-        </div>
-      </section>
-      <section class="fifth-section">
-        <div>
-          <h2 class="headline-fifth-section">Customers</h2>
-          <ul list-of-customers>
-            <li class="customers-item">
-              <a href="" class="customers-link">
-                <svg width="104" height="56" class="customers-svg"><use href="./images/photo11.svg"></use></svg>
-              </a>
-            </li>
-            <li class="customers-item">
-              <a href="" class="customers-link">
-                <svg width="104" height="56" class="customers-svg"><use href="./images/photo22.svg"></use></svg>
-              </a>
-            </li>
-            <li class="customers-item">
-              <a href="" class="customers-link">
-                <svg width="104" height="56" class="customers-svg"><use href="./images/photo33.svg"></use></svg>
-              </a>
-            </li>
-            <li class="customers-item">
-              <a href="" class="customers-link">
-                <svg width="104" height="56" class="customers-svg"><use href="./images/photo44.svg"></use></svg>
-              </a>
-            </li>
-            <li class="customers-item">
-              <a href="" class="customers-link">
-                <svg width="104" height="56" class="customers-svg"><use href="./images/photo55.svg"></use></svg>
-              </a>
-            </li>
-          </ul>
+              </li>
+              <li>
+                <a href="" class="social-network-link">
+                  <svg width="16" height="16" class="icon-link">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
