--- a/index.html
+++ b/index.html
@@ -236,6 +236,55 @@
           </div>
         </div>
       </section>
+      <section class="fifth-section">
+        <div class="container">
+            <h2 class="headline-fifth-section">Customers</h2>
+            <ul class="list-of-customers">
+              <li class="customers-item">
+                <a href="/" class="customers-link">
+                  <svg width="104" height="56">
+                    <use href="./images/icons.svg#icon-group-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a href="/" class="customers-link">
+                  <svg width="104" height="56">
+                    <use href="./images/icons.svg#icon-group2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a href="/" class="customers-link">
+                  <svg width="104" height="56">
+                    <use href="./images/icons.svg#icon-group-3"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a href="/" class="customers-link">
+                  <svg width="104" height="56">
+                    <use href="./images/icons.svg#icon-group-4"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a href="/" class="customers-link">
+                  <svg width="104" height="56">
+                    <use href="./images/icons.svg#icon-group-5"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="customers-item">
+                <a href="/" class="customers-link">
+                  <svg width="104" height="56">
+                    <use href="./images/icons.svg#icon-group-6"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
