--- a/index.html
+++ b/index.html
@@ -242,42 +242,42 @@
             <ul class="list-of-customers">
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56">
+                  <svg width="104" height="56" class="svg_customers">
                     <use href="./images/icons.svg#icon-group-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56">
+                  <svg width="104" height="56" class="svg_customers">
                     <use href="./images/icons.svg#icon-group2"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56">
+                  <svg width="104" height="56" class="svg_customers">
                     <use href="./images/icons.svg#icon-group-3"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56">
+                  <svg width="104" height="56" class="svg_customers">
                     <use href="./images/icons.svg#icon-group-4"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56">
+                  <svg width="104" height="56" class="svg_customers">
                     <use href="./images/icons.svg#icon-group-5"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56">
+                  <svg width="104" height="56" class="svg_customers">
                     <use href="./images/icons.svg#icon-group-6"></use>
                   </svg>
                 </a>
@@ -287,7 +287,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-main">
         <a href="./index.html" class="logo-footer link"
           >Web <span class="studio-word-footer">Studio</span></a
         >
@@ -296,6 +296,46 @@
           digital marketing & growth solutions.
         </p>
       </div>
+      <div>
+        <p class="social-media-footer">Social Media</p>
+        <ul class="social-media-list-footer">
+          <li class="social-media-item-footer">
+            <a href="" class="social-media-link-footer"></a>
+            <svg width="24" height="24" class="svg-footer">
+              <use href="./images/icons.svg#icon-instagram"></use>
+            </svg>
+          </li>
+          <li class="social-media-item-footer">
+            <a href="" class="social-media-link-footer"></a>
+            <svg width="24" height="24" class="svg-footer">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+          </li>
+          <li class="social-media-item-footer">
+            <a href="" class="social-media-link-footer"></a>
+            <svg width="24" height="24" class="svg-footer">
+              <use href="./images/icons.svg#icon-facebook"></use>
+            </svg>
+          </li>
+          <li class="social-media-item-footer">
+            <a href="" class="social-media-link-footer"></a>
+            <svg width="24" height="24" class="svg-footer">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+          </li>
+        </ul>
+      </div>
     </footer>
+    <div data-modal class="js-structure is-hidden">
+      <div class="modal-window">
+        <button type="button" data-modal-close class="button-close">
+          <svg width="8" height="8" class="svg-modal-window">
+            <use href="./images/icons.svg#icon-dagger"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    
+    <script src="./js/modal.js"></script>
   </body>
 </html>
