--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,11 @@
                
                <ul class="list advantages-list">
                    <li class="advantages-item">
-                       <a class="link">
-                            <img src="./images/image8.jpg" alt="Banking App Interface Concept" width="360">
+                       <a class="link advantages-link">
+                            <div class="container-for-photo">
+                                <img src="./images/image8.jpg" alt="Banking App Interface Concept" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Banking App Interface Concept</h2>
                                 <p class="helpful-fitches">App</p>
@@ -56,8 +59,11 @@
                        </a>
                     </li>
                     <li class="advantages-item">
-                       <a class="link">
-                           <img src="./images/image1.jpg" alt="Cashless payment" width="360">
+                       <a class="link advantages-link">
+                            <div class="container-for-photo">
+                                <img src="./images/image1.jpg" alt="Cashless payment" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Cashless Payment</h2>
                                 <p class="helpful-fitches">Marketing</p>
@@ -65,8 +71,11 @@
                        </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link">
-                            <img src="./images/image2.jpg" alt="Meditation App" width="360">
+                        <a class="link advantages-link">
+                            <div class="container-for-photo"> 
+                                <img src="./images/image2.jpg" alt="Meditation App" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>   
                             <div class="applications">
                                 <h2 class="advantages-headline">Meditation App</h2>
                                 <p class="helpful-fitches">App</p>
@@ -74,8 +83,11 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link">
-                            <img src="./images/image3.jpg" alt="Taxi Service" width="360">
+                        <a class="link advantages-link">
+                            <div class="container-for-photo">   
+                                <img src="./images/image3.jpg" alt="Taxi Service" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Taxi Service</h2>
                                 <p class="helpful-fitches">Marketing</p>
@@ -83,8 +95,11 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link">
-                            <img src="./images/image9.jpg" alt="Screen Illustrations" width="360">
+                        <a class="link advantages-link">
+                            <div class="container-for-photo">  
+                                <img src="./images/image9.jpg" alt="Screen Illustrations" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Screen Illustrations</h2> 
                                 <p class="helpful-fitches">Design</p>
@@ -92,8 +107,11 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link">
-                            <img src="./images/image4.jpg" alt="Online Courses" width="360">
+                        <a class="link advantages-link">
+                            <div class="container-for-photo">
+                                <img src="./images/image4.jpg" alt="Online Courses" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>    
                             <div class="applications">
                                 <h2 class="advantages-headline">Online Courses</h2>
                                 <p class="helpful-fitches">Marketing</p>
@@ -101,8 +119,11 @@
                        </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link">
-                            <img src="./images/image5.jpg" alt="Instagram Stories Concept" width="360">
+                        <a class="link advantages-link">
+                            <div class="container-for-photo">  
+                                <img src="./images/image5.jpg" alt="Instagram Stories Concept" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>  
                             <div class="applications">
                                 <h2 class="advantages-headline">Instagram Stories Concept</h2>
                                 <p class="helpful-fitches">Design</p>
@@ -110,8 +131,11 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link">
-                            <img src="./images/image6.jpg" alt="Organic Food" width="360">
+                        <a class="link advantages-link">
+                            <div class="container-for-photo">
+                                <img src="./images/image6.jpg" alt="Organic Food" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Organic Food</h2>
                                 <p class="helpful-fitches">Web Site</p>
@@ -119,8 +143,11 @@
                         </a>
                     </li>
                     <li class="advantages-item">
-                        <a class="link">
-                            <img src="./images/image7.jpg" alt="Fresh Coffee" width="360">
+                        <a class="link advantages-link">
+                            <div class="container-for-photo"> 
+                                <img src="./images/image7.jpg" alt="Fresh Coffee" width="360">
+                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            </div>   
                             <div class="applications">
                                 <h2 class="advantages-headline">Fresh Coffee</h2>
                                 <p class="helpful-fitches">Web Site</p>
