--- a/portfolio.html
+++ b/portfolio.html
@@ -159,9 +159,44 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <a href="./images/Logo.png" class="logo-footer link">Web <span class="studio-word-decorate-portfolio-footer">Studio</span></a>
-            <p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        <div class="container footer-container">
+            <div class="footer-container-for-logo-and-paragraph">
+                <a href="./images/Logo.png" class="logo-footer link">Web <span class="studio-word-decorate-portfolio-footer">Studio</span></a>
+                <p class="p-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+            </div>
+            <div>
+                <p class="social-media-portfolio">Social media</p>
+                <ul class="ul-footer">
+                    <li class="socail-media-item-portfolio">
+                        <a href="" class="social-media-link">
+                            <svg width="24" height="24" class="svg-footer-portfolio">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socail-media-item-portfolio">
+                        <a href="" class="social-media-link">
+                            <svg width="24" height="24" class="svg-footer-portfolio">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socail-media-item-portfolio">
+                        <a href="" class="social-media-link">
+                            <svg width="24" height="24" class="svg-footer-portfolio">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="socail-media-item-portfolio">
+                        <a href="" class="social-media-link">
+                            <svg width="24" height="24" class="svg-footer-portfolio">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
