--- a/index.html
+++ b/index.html
@@ -288,43 +288,45 @@
     </main>
     <footer class="footer">
       <div class="container footer-main">
-        <a href="./index.html" class="logo-footer link"
-          >Web <span class="studio-word-footer">Studio</span></a
-        >
-        <p class="p-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div>
-        <p class="social-media-footer">Social Media</p>
-        <ul class="social-media-list-footer">
-          <li class="social-media-item-footer">
-            <a href="" class="social-media-link-footer"></a>
-            <svg width="24" height="24" class="svg-footer">
-              <use href="./images/icons.svg#icon-instagram"></use>
-            </svg>
-          </li>
-          <li class="social-media-item-footer">
-            <a href="" class="social-media-link-footer"></a>
-            <svg width="24" height="24" class="svg-footer">
-              <use href="./images/icons.svg#icon-twitter"></use>
-            </svg>
-          </li>
-          <li class="social-media-item-footer">
-            <a href="" class="social-media-link-footer"></a>
-            <svg width="24" height="24" class="svg-footer">
-              <use href="./images/icons.svg#icon-facebook"></use>
-            </svg>
-          </li>
-          <li class="social-media-item-footer">
-            <a href="" class="social-media-link-footer"></a>
-            <svg width="24" height="24" class="svg-footer">
-              <use href="./images/icons.svg#icon-linkedin"></use>
-            </svg>
-          </li>
-        </ul>
-      </div>
+          <div class="footer-main-for-link-and-paragraph">
+              <a href="./index.html" class="logo-footer link"
+                >Web <span class="studio-word-footer">Studio</span></a
+              >
+              <p class="p-footer">
+                Increase the flow of customers and sales for your business with
+                digital marketing & growth solutions.
+              </p>
+          </div>
+          <div>
+            <p class="social-media-footer">Social Media</p>
+            <ul class="social-media-list-footer">
+              <li class="social-media-item-footer">
+                <a href="" class="social-media-link-footer"></a>
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </li>
+              <li class="social-media-item-footer">
+                <a href="" class="social-media-link-footer"></a>
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </li>
+              <li class="social-media-item-footer">
+                <a href="" class="social-media-link-footer"></a>
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </li>
+              <li class="social-media-item-footer">
+                <a href="" class="social-media-link-footer"></a>
+                <svg width="24" height="24" class="svg-footer">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </li>
+            </ul>
+          </div>
+      </div>  
     </footer>
     <div data-modal class="js-structure is-hidden">
       <div class="modal-window">
