--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
               <div class="person-and-job">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="person-text">Product Designer</p>
+                <a href="" class="social-network-link">
+                  <svg width="16" height="16" class="icon-link">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>              
               </div>
             </li>
             <li class="people-item">
@@ -175,6 +180,11 @@
               <div class="person-and-job">
                 <h3 class="person">Tom Ford</h3>
                 <p class="person-text">Frontend Developer</p>
+                <a href="" class="social-network-link">
+                  <svg width="16" height="16" class="icon-link">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="people-item">
@@ -187,6 +197,11 @@
               <div class="person-and-job">
                 <h3 class="person">Camila Garcia</h3>
                 <p class="person-text">Marketing</p>
+                <a href="" class="social-network-link">
+                  <svg width="16" height="16" class="icon-link">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
               </div>
             </li>
             <li class="people-item">
@@ -199,41 +214,14 @@
               <div class="person-and-job">
                 <h3 class="person">Daniel Wilson</h3>
                 <p class="person-text">UI Designer</p>
-              </div>
-            </li>
-          </ul>
-          <div>
-            <ul class="social-networks">
-              <li class="social-networks-item">
-                  <a href="" class="social-network-link">
-                    <svg width="16" height="16" class="icon-link">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>              
-              </li>
-              <li>
-                  <a href="" class="social-network-link">
-                    <svg width="16" height="16" class="icon-link">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-              </li>
-              <li>
-                <a href="" class="social-network-link">
-                  <svg width="16" height="16" class="icon-link">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
                 <a href="" class="social-network-link">
                   <svg width="16" height="16" class="icon-link">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
       <section class="fifth-section">
@@ -298,7 +286,7 @@
               </p>
           </div>
           <div>
-            <p class="social-media-footer">Social Media</p>
+            <p class="social-media-footer">Social media</p>
             <ul class="social-media-list-footer">
               <li class="social-media-item-footer">
                 <a href="" class="social-media-link-footer"></a>
