--- a/portfolio.html
+++ b/portfolio.html
@@ -166,7 +166,7 @@
             </div>
             <div>
                 <p class="social-media-portfolio">Social media</p>
-                <ul class="ul-footer">
+                <ul class="ul-footer list">
                     <li class="socail-media-item-portfolio">
                         <a href="" class="social-media-link">
                             <svg width="24" height="24" class="svg-footer-portfolio">
