--- a/index.html
+++ b/index.html
@@ -163,30 +163,30 @@
               <div class="person-and-job">
                 <h3 class="person">Mark Guerrero</h3>
                 <p class="person-text">Product Designer</p>
-                <ul>
-                  <li>
-                    <a href="" class="social-network-link">
+                <ul class="social-media-of-person-list list">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -205,30 +205,30 @@
               <div class="person-and-job">
                 <h3 class="person">Tom Ford</h3>
                 <p class="person-text">Frontend Developer</p>
-                <ul>
-                  <li>
-                    <a href="" class="social-network-link">
+                <ul class="social-media-of-person-list list">
+                  <li class="social-media-of-person-item ">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item list">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -247,30 +247,30 @@
               <div class="person-and-job">
                 <h3 class="person">Camila Garcia</h3>
                 <p class="person-text">Marketing</p>
-                <ul>
-                  <li>
-                    <a href="" class="social-network-link">
+                <ul class="social-media-of-person-list list">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -289,30 +289,30 @@
               <div class="person-and-job">
                 <h3 class="person">Daniel Wilson</h3>
                 <p class="person-text">UI Designer</p>
-                <ul>
-                  <li>
-                    <a href="" class="social-network-link">
+                <ul class="social-media-of-person-list list">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
-                    <a href="" class="social-network-link">
+                  <li class="social-media-of-person-item">
+                    <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
@@ -327,7 +327,7 @@
       <section class="fifth-section">
         <div class="container">
             <h2 class="headline-fifth-section">Customers</h2>
-            <ul class="list-of-customers">
+            <ul class="list-of-customers list">
               <li class="customers-item">
                 <a href="/" class="customers-link">
                   <svg width="104" height="56" class="svg_customers">
@@ -387,7 +387,7 @@
           </div>
           <div>
             <p class="social-media-footer">Social media</p>
-            <ul class="social-media-list-footer">
+            <ul class="social-media-list-footer list">
               <li class="social-media-item-footer">
                 <a href="" class="social-media-link-footer"></a>
                 <svg width="24" height="24" class="svg-footer">
