--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
             >Web <span class="studio-word-decorate">Studio</span></a
           >
           <ul class="list menu-header">
-            <li><a href="./index.html" class="nav-item link">Studio</a></li>
+            <li><a href="./index.html" class="nav-item link current">Studio</a></li>
             <li>
-              <a href="./portfolio.html" class="nav-item link">Portfolio</a>
+              <a href="./portfolio.html" class="nav-item link current">Portfolio</a>
             </li>
             <li><a href="" class="nav-item link">Contacts</a></li>
           </ul>
@@ -206,28 +206,28 @@
                 <h3 class="person">Tom Ford</h3>
                 <p class="person-text">Frontend Developer</p>
                 <ul class="social-media-of-person-list list">
-                  <li class="social-media-of-person-item ">
+                  <li class="social-media-of-person-item current">
                     <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-media-of-person-item list">
+                  <li class="social-media-of-person-item current">
                     <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-media-of-person-item">
+                  <li class="social-media-of-person-item current">
                     <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="social-media-of-person-item">
+                  <li class="social-media-of-person-item current">
                     <a href="" class="social-media-link">
                       <svg width="16" height="16" class="icon-link">
                         <use href="./images/icons.svg#icon-linkedin"></use>
@@ -330,42 +330,42 @@
             <ul class="list-of-customers list">
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56" class="svg_customers">
+                  <svg width="104" height="56" class="svg-customers">
                     <use href="./images/icons.svg#icon-group-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56" class="svg_customers">
+                  <svg width="104" height="56" class="svg-customers">
                     <use href="./images/icons.svg#icon-group2"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56" class="svg_customers">
+                  <svg width="104" height="56" class="svg-customers">
                     <use href="./images/icons.svg#icon-group-3"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56" class="svg_customers">
+                  <svg width="104" height="56" class="svg-customers">
                     <use href="./images/icons.svg#icon-group-4"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56" class="svg_customers">
+                  <svg width="104" height="56" class="svg-customers">
                     <use href="./images/icons.svg#icon-group-5"></use>
                   </svg>
                 </a>
               </li>
               <li class="customers-item">
                 <a href="/" class="customers-link">
-                  <svg width="104" height="56" class="svg_customers">
+                  <svg width="104" height="56" class="svg-customers">
                     <use href="./images/icons.svg#icon-group-6"></use>
                   </svg>
                 </a>
