--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
             <nav class="header-nav">
                 <a href="./images/Logo.png" class="logo-header link">Web <span class="studio-word-decorate">Studio</span></a>
                 <ul class="list menu-header">
-                    <li><a href="./index.html" class="nav-item link">Studio</a></li>
-                    <li><a href="./portfolio.html" class="nav-item link">Portfolio</a></li>
+                    <li><a href="./index.html" class="nav-item link current">Studio</a></li>
+                    <li><a href="./portfolio.html" class="nav-item link current">Portfolio</a></li>
                     <li><a href="" class="nav-item link">Contacts</a></li>
                 </ul>
             </nav>
