--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li class="second-section-item">
               <div class="div-for-icon">
                   <svg width="64" height="64">
-                    <use href="./images/icon.svg#icon-antenna"></use>
+                    <use href="./images/icons.svg#icon-antenna"></use>
                   </svg>
               </div>
               <h3 class="quality">Strategy</h3>
@@ -82,7 +82,7 @@
             <li class="second-section-item">
               <div class="div-for-icon">
                 <svg width="64" height="64">
-                  <use href="./images/icon.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="quality">Punctuality</h3>
@@ -94,7 +94,7 @@
             <li class="second-section-item">
               <div class="div-for-icon">
                 <svg width="64" height="64">
-                  <use href="./images/icon.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>   
               <h3 class="quality">Diligence</h3>
@@ -106,7 +106,7 @@
             <li class="second-section-item">
               <div class="div-for-icon">
                 <svg width="64" height="64">
-                  <use href="./images/icon.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>  
               <h3 class="quality">Technologies</h3>
@@ -338,7 +338,7 @@
               <li class="customers-item">
                 <a href="/" class="customers-link">
                   <svg width="104" height="56" class="svg-customers">
-                    <use href="./images/icons.svg#icon-group2"></use>
+                    <use href="./images/icons.svg#icon-group-2"></use>
                   </svg>
                 </a>
               </li>
