--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image8.jpg" alt="Banking App Interface Concept" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Banking App Interface Concept</h2>
@@ -62,7 +62,7 @@
                        <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image1.jpg" alt="Cashless payment" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Cashless Payment</h2>
@@ -74,7 +74,7 @@
                         <a href="/" class="link advantages-link">
                             <div class="container-for-photo"> 
                                 <img src="./images/image2.jpg" alt="Meditation App" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>   
                             <div class="applications">
                                 <h2 class="advantages-headline">Meditation App</h2>
@@ -86,7 +86,7 @@
                         <a href="/" class="link advantages-link">
                             <div class="container-for-photo">   
                                 <img src="./images/image3.jpg" alt="Taxi Service" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Taxi Service</h2>
@@ -98,7 +98,7 @@
                         <a href="/" class="link advantages-link">
                             <div class="container-for-photo">  
                                 <img src="./images/image9.jpg" alt="Screen Illustrations" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Screen Illustrations</h2> 
@@ -110,7 +110,7 @@
                         <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image4.jpg" alt="Online Courses" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>    
                             <div class="applications">
                                 <h2 class="advantages-headline">Online Courses</h2>
@@ -122,7 +122,7 @@
                         <a href="/" class="link advantages-link">
                             <div class="container-for-photo">  
                                 <img src="./images/image5.jpg" alt="Instagram Stories Concept" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>  
                             <div class="applications">
                                 <h2 class="advantages-headline">Instagram Stories Concept</h2>
@@ -134,7 +134,7 @@
                         <a href="/" class="link advantages-link">
                             <div class="container-for-photo">
                                 <img src="./images/image6.jpg" alt="Organic Food" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>
                             <div class="applications">
                                 <h2 class="advantages-headline">Organic Food</h2>
@@ -146,7 +146,7 @@
                         <a href="/" class="link advantages-link">
                             <div class="container-for-photo"> 
                                 <img src="./images/image7.jpg" alt="Fresh Coffee" width="360">
-                                <p class="fixed-paragraph-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <p class="decorate-p">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                             </div>   
                             <div class="applications">
                                 <h2 class="advantages-headline">Fresh Coffee</h2>
